--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+    "homepage": "http://ares909.github.io/aviasales-test-ts/",
     "name": "aviasales-ts",
     "version": "0.1.0",
     "private": true,
@@ -65,6 +66,7 @@
         "eslint-plugin-jsx-a11y": "^6.5.1",
         "eslint-plugin-react": "^7.27.1",
         "eslint-plugin-react-hooks": "^4.3.0",
+        "gh-pages": "^3.2.3",
         "husky": "^7.0.4",
         "lint-staged": "^12.1.3",
         "sass": "^1.45.1"
